--- a/mobile/.gitignore
+++ b/mobile/.gitignore
@@ -1,43 +1,54 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
-# dependencies
-node_modules/
-
-# Expo
-.expo/
-dist/
-web-build/
-expo-env.d.ts
-
-# Native
-.kotlin/
-*.orig.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-
-# Metro
-.metro-health-check*
-
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
-
-# macOS
+# --- OS cruft ---
 .DS_Store
-*.pem
+Thumbs.db
 
-# local env files
-.env*.local
+# --- Editors / IDEs ---
+.vscode/
+.idea/
+*.code-workspace
 
-# typescript
-*.tsbuildinfo
+# --- Node / package managers ---
+node_modules/
+**/node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.pnpm-debug.log*
 
-app-example
+# --- Env & secrets (DO NOT COMMIT KEYS) ---
+.env
+.env.*
+!.env.example
+# Keep .env.example if you have one
+.npmrc
 
-# generated native folders
-/ios
-/android
+# --- Next.js (web) ---
+.next/
+out/
+# If you export static site, the output dir may be "out/"
+
+# --- Tailwind / tooling caches (safe to ignore if created) ---
+.tailwind*
+.postcss-cache/
+
+# --- Coverage / reports ---
+coverage/
+reports/
+
+# --- Expo / React Native (mobile/) ---
+.expo/
+.expo-shared/
+web-build/
+dist/
+build/
+android/
+ios/
+# If you eject/prebuild and want to commit native projects, remove the two lines above.
+
+# --- Platform caches ---
+*.swp
+*.swo
+
+# --- Misc ---
+*.log
