--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.2.32",
+    "next": "latest",
     "openai": "4.53.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
